# spelled_to_num

./: .gitignore  CMakeLists.txt  spelled_to_num.cpp  spelled_to_num.h
